Add API examples & OAuth2 Bearer support
